--- a/src/containers/Post/UserPosts.css
+++ b/src/containers/Post/UserPosts.css
@@ -2,6 +2,7 @@
   margin: 0 auto;
   width: 30%;
   display: inline-block;
+  padding: 3%;
 }
 
 .userPosts {
