--- a/src/containers/User/UserShow.css
+++ b/src/containers/User/UserShow.css
@@ -1,30 +1,27 @@
-.user-data {
-  min-width: 40%;
-  display: inline-block;
+.user-show-data {
+  min-width: 25%;
+  display: flex;
   float: left;
   padding-right: 5%;
-  height: 33%;
   flex-flow: column;
-}
-
-.user-card {
-  height: 50%;
+  width: 35%;
 }
 
 .user-posts {
-  width: 50%;
-  display: inline-block;
+  min-width: 40%;
+  width: 65%;
   float: right;
   overflow-y: scroll;
   flex-flow: column;
   display: flex;
-  max-height: 800px;
+  height: 725px;
   text-align: center;
 }
 
 .user-show-content {
+  padding-left: 4%;
   padding-right: 3%;
   flex-wrap: wrap;
-  padding-top: 3%;
+  padding-top: 2%;
   width: 100%;
 }
